# CodeAtlas

./: .gitignore  README.md
.github/workflows/: validate.yml
mcp-code-constellation/: README.md  export_graph.py  main.py  pyproject.toml  test_server.py  test_ts.py
mcp-code-constellation/mock_repo/: auth.py
mcp-code-constellation/src/mcp_code_constellation/: graph.py  indexer.py  server.py  storage.py  web_visualizer.py
scripts/: bootstrap-project.sh  setup-machine.sh  validate-skills.py
skills/find-impacts/: SKILL.md
skills/find-impacts/agents/: openai.yaml
skills/repo-map/: SKILL.md
skills/repo-map/agents/: openai.yaml
templates/project/: .gitignore.snippet  AGENTS.md
templates/project/.codex/: config.toml
templates/project/scripts/ai/: repo-map.sh
