[project]
name = "mcp-code-constellation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "mcp>=1.26.0",
    "chromadb>=0.4.0",
    "fastembed>=0.2.0",
    "onnxruntime<=1.23.2",
    "pydantic>=2.12.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "networkx>=3.4.2",
]

[tool.uv]
"environments" = ["sys_platform == 'darwin'"]

[project.scripts]
mcp-code-constellation = "mcp_code_constellation.server:main"
